--- a/Bodybuilder/Base.lproj/Main.storyboard
+++ b/Bodybuilder/Base.lproj/Main.storyboard
@@ -431,11 +431,104 @@
                         <segue destination="0KP-yO-cCH" kind="relationship" relationship="viewControllers" id="beO-Hc-GXC"/>
                         <segue destination="ns6-Cw-aO1" kind="relationship" relationship="viewControllers" id="UHq-RE-oWf"/>
                         <segue destination="vzd-M6-j5r" kind="relationship" relationship="viewControllers" id="GhE-ac-Awn"/>
+                        <segue destination="ul7-po-YKr" kind="relationship" relationship="viewControllers" id="ydu-WR-VwY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jnb-2t-y7a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="110.19490254872565"/>
+        </scene>
+        <!--Food Drop-->
+        <scene sceneID="xVD-8d-kAG">
+            <objects>
+                <viewController id="ul7-po-YKr" customClass="FoodDropViewController" customModule="Bodybuilder" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Sqk-Sm-s9L"/>
+                        <viewControllerLayoutGuide type="bottom" id="BdK-DK-uZB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bkw-kN-PTe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1_happy" translatesAutoresizingMaskIntoConstraints="NO" id="Hdc-hs-PR0">
+                                <rect key="frame" x="100" y="537" width="183" height="73"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cIF-uM-ezN">
+                                <rect key="frame" x="0.0" y="515" width="188" height="104"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="moveLeftTouchDown:" destination="ul7-po-YKr" eventType="touchDown" id="U4D-ty-qD9"/>
+                                    <action selector="moveLeftTouchUp:" destination="ul7-po-YKr" eventType="touchUpInside" id="V2K-sO-64F"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="16_bcaa" translatesAutoresizingMaskIntoConstraints="NO" id="YYF-Fb-Peh">
+                                <rect key="frame" x="81" y="80" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="10_rice" translatesAutoresizingMaskIntoConstraints="NO" id="d8p-78-HWF">
+                                <rect key="frame" x="254" y="41" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="moE-bZ-oAQ">
+                                <rect key="frame" x="187" y="515" width="188" height="104"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="moveRightTouchDown:" destination="ul7-po-YKr" eventType="touchDown" id="tDr-LP-nag"/>
+                                    <action selector="moveRightTouchUp:" destination="ul7-po-YKr" eventType="touchUpInside" id="9sD-Ee-SdS"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cC-hK-Z0u">
+                                <rect key="frame" x="25" y="16" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pizza" translatesAutoresizingMaskIntoConstraints="NO" id="3UR-QO-Btm">
+                                <rect key="frame" x="160" y="158" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pizza" translatesAutoresizingMaskIntoConstraints="NO" id="10H-eD-BYp">
+                                <rect key="frame" x="164" y="80" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="01_water" translatesAutoresizingMaskIntoConstraints="NO" id="t8n-5Z-o7X">
+                                <rect key="frame" x="100" y="0.0" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="03_banana" translatesAutoresizingMaskIntoConstraints="NO" id="Vfs-Ss-dip">
+                                <rect key="frame" x="163" y="0.0" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="07_egg" translatesAutoresizingMaskIntoConstraints="NO" id="v0L-Zk-UJP">
+                                <rect key="frame" x="228" y="0.0" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pizza" translatesAutoresizingMaskIntoConstraints="NO" id="NPe-ss-guN">
+                                <rect key="frame" x="317" y="28" width="55" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20000000000000001" green="0.24313725489999999" blue="0.30980392159999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Food Drop" id="lmt-kb-XJ8"/>
+                    <connections>
+                        <outlet property="character" destination="Hdc-hs-PR0" id="yFh-rM-P16"/>
+                        <outlet property="element1" destination="YYF-Fb-Peh" id="dVM-Zq-XxT"/>
+                        <outlet property="element2" destination="d8p-78-HWF" id="Ann-SB-sQW"/>
+                        <outlet property="element3" destination="3UR-QO-Btm" id="V8E-IF-UAs"/>
+                        <outlet property="element4" destination="t8n-5Z-o7X" id="5Iy-S4-tMS"/>
+                        <outlet property="element5" destination="Vfs-Ss-dip" id="dX7-9M-dUw"/>
+                        <outlet property="element6" destination="v0L-Zk-UJP" id="XIL-OD-XRB"/>
+                        <outlet property="element7" destination="10H-eD-BYp" id="qKA-TG-t0K"/>
+                        <outlet property="element8" destination="NPe-ss-guN" id="oGM-IT-2g9"/>
+                        <outlet property="pointsLabel" destination="6cC-hK-Z0u" id="Qdw-ue-1PS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sg3-CF-Jv9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="-589.65517241379314"/>
         </scene>
         <!--Shop-->
         <scene sceneID="yFz-ho-sla">
@@ -622,8 +715,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="01_water" width="512" height="512"/>
+        <image name="03_banana" width="512" height="512"/>
+        <image name="07_egg" width="512" height="512"/>
+        <image name="10_rice" width="512" height="512"/>
+        <image name="16_bcaa" width="512" height="512"/>
         <image name="1_happy" width="298" height="326"/>
         <image name="bodybuilder-coin" width="256" height="256"/>
+        <image name="pizza" width="256" height="256"/>
         <image name="shop_1" width="512" height="512"/>
     </resources>
 </document>
