added alamofire and swiftyJSON to project && new view controller

--- a/Bodybuilder/Base.lproj/Main.storyboard
+++ b/Bodybuilder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sQd-s9-8gN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sQd-s9-8gN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1067,6 +1067,36 @@
             </objects>
             <point key="canvasLocation" x="1661.5999999999999" y="868.51574212893559"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="EdX-Pr-nOX">
+            <objects>
+                <viewController id="CQE-aY-vZy" customClass="OnlineViewController" customModule="Bodybuilder" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="udu-Rd-alu"/>
+                        <viewControllerLayoutGuide type="bottom" id="KVq-6y-XBF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="akM-Wl-qYf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9F-UV-L26">
+                                <rect key="frame" x="116" y="279" width="143" height="108"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.3921568627" blue="0.098039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="refresh:" destination="CQE-aY-vZy" eventType="touchUpInside" id="mfT-bm-9Qq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="WJ6-9w-kOZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sfH-m1-D7R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2454" y="869"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="SFn-YW-bFQ">
             <objects>
@@ -1085,6 +1115,7 @@
                         <segue destination="VK6-qm-3TN" kind="relationship" relationship="viewControllers" id="fbz-wM-85U"/>
                         <segue destination="vzd-M6-j5r" kind="relationship" relationship="viewControllers" id="jal-kV-MYI"/>
                         <segue destination="E6T-i2-aQh" kind="relationship" relationship="viewControllers" id="YyM-SP-l6w"/>
+                        <segue destination="CQE-aY-vZy" kind="relationship" relationship="viewControllers" id="vWF-ko-jKe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jnb-2t-y7a" userLabel="First Responder" sceneMemberID="firstResponder"/>
